src/main/java/Compilador/y.output
   0  $accept : programa $end

   1  programa : ID_simple BEGIN sentencias END
   2           | ID_simple BEGIN END
   3           | BEGIN sentencias END
   4           | ID_simple BEGIN sentencias
   5           | ID_simple sentencias END
   6           | ID_simple sentencias

   7  sentencias : sentencias sentencia
   8             | sentencia

   9  sentencia : sentencia_declarativa
  10            | error ';'
  11            | sentencia_ejecutable ';'
  12            | sentencia_ejecutable

  13  sentencia_declarativa : declaracion_variable
  14                        | declaracion_funciones ';'
  15                        | declaracion_subtipo ';'
  16                        | declaracion_funciones
  17                        | declaracion_subtipo

  18  declaracion_variable : tipo variables ';'
  19                       | tipo variables error

  20  tipo : ID_simple
  21       | tipo_primitivo

  22  tipo_primitivo : INTEGER
  23                 | DOUBLE
  24                 | OCTAL

  25  declaracion_subtipo : TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  26                      | TYPEDEF ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'
  27                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig
  28                      | TYPEDEF ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig
  29                      | TYPEDEF TRIPLE '<' tipo '>' ID_simple
  30                      | TYPEDEF ID_simple ASIGNACION tipo '{' ',' CTE_con_sig '}'
  31                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig '}'
  32                      | TYPEDEF ID_simple ASIGNACION tipo '{' CTE_con_sig ',' '}'
  33                      | TYPEDEF ID_simple ASIGNACION tipo '{' '}'
  34                      | TYPEDEF ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  35                      | TYPEDEF ID_simple ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'
  36                      | TYPEDEF '<' tipo '>' ID_simple
  37                      | TYPEDEF TRIPLE tipo '>' ID_simple
  38                      | TYPEDEF TRIPLE '<' tipo ID_simple
  39                      | TYPEDEF TRIPLE tipo ID_simple
  40                      | TYPEDEF TRIPLE '<' tipo '>' error

  41  declaracion_funciones : encabezado_funcion parametros_parentesis BEGIN cuerpo_funcion END

  42  encabezado_funcion : tipo FUN ID
  43                     | tipo FUN

  44  parametros_parentesis : '(' tipo_primitivo ID_simple ')'
  45                        | '(' tipo_primitivo ')'
  46                        | '(' ID_simple ')'
  47                        | '(' ')'
  48                        | '(' error ')'

  49  cuerpo_funcion : sentencias

  50  retorno : RET '(' expresion_arit ')'
  51          | RET '(' ')'

  52  sentencia_ejecutable : asignacion
  53                       | sentencia_IF
  54                       | sentencia_WHILE
  55                       | sentencia_goto
  56                       | ETIQUETA
  57                       | outf_rule
  58                       | retorno

  59  outf_rule : OUTF '(' expresion_arit ')'
  60            | OUTF '(' ')'
  61            | OUTF '(' cadena ')'
  62            | OUTF '(' sentencias ')'

  63  asignacion : variable_simple ASIGNACION expresion_arit
  64             | variable_simple '{' CTE '}' ASIGNACION expresion_arit
  65             | variable_simple '{' '-' CTE '}' ASIGNACION expresion_arit

  66  invocacion : ID_simple '(' expresion_arit ')'
  67             | ID_simple '(' tipo_primitivo '(' expresion_arit ')' ')'
  68             | ID_simple '(' ')'
  69             | ID_simple '(' error ')'

  70  list_expre : list_expre ',' expresion_arit
  71             | ',' expresion_arit
  72             | list_expre ','
  73             | expresion_arit

  74  expresion_arit : expresion_arit '+' termino
  75                 | expresion_arit '-' termino
  76                 | termino
  77                 | error '+' error
  78                 | error '-' error
  79                 | expresion_arit '+' error
  80                 | expresion_arit '-' error
  81                 | error termino

  82  termino : termino "" factor
  83          | termino '/' factor
  84          | factor
  85          | error '*' error
  86          | error '/' error
  87          | termino '*' error
  88          | termino '/' error

  89  factor : variable_simple
  90         | CTE_con_sig
  91         | invocacion
  92         | variable_simple '{' CTE '}'
  93         | variable_simple '{' '-' CTE '}'

  94  variables : variables ',' variable_simple
  95            | variables variable_simple
  96            | variable_simple

  97  variable_simple : ID_simple

  98  ID_simple : ID

  99  CTE_con_sig : CTE
 100              | '-' CTE

 101  sentencia_IF : IF condicion bloque_THEN ';' bloque_else ';' END_IF
 102               | IF condicion bloque_THEN ';' END_IF
 103               | IF condicion THEN END_IF
 104               | IF condicion bloque_THEN ';' ELSE END_IF
 105               | IF condicion bloque_THEN bloque_else ';' END_IF
 106               | IF condicion bloque_THEN END_IF
 107               | IF condicion bloque_THEN ';' bloque_else END_IF
 108               | IF condicion bloque_THEN bloque_else END_IF
 109               | IF condicion bloque_THEN ';' error
 110               | IF condicion bloque_THEN ';' bloque_else ';' error

 111  condicion : '(' '(' list_expre ')' comparador '(' list_expre ')' ')'
 112            | '(' list_expre ')' comparador '(' list_expre ')' ')'
 113            | '(' '(' list_expre ')' comparador '(' list_expre ')'
 114            | '(' list_expre ')' comparador '(' list_expre ')'
 115            | '(' expresion_arit comparador expresion_arit ')'
 116            | expresion_arit comparador expresion_arit ')'
 117            | '(' expresion_arit comparador expresion_arit
 118            | expresion_arit comparador expresion_arit
 119            | '(' list_expre ')'
 120            | '(' '(' list_expre ')' '(' list_expre ')' ')'
 121            | '(' '(' list_expre comparador '(' list_expre ')' ')'
 122            | '(' '(' list_expre ')' comparador list_expre ')' ')'

 123  comparador : '>'
 124             | MAYORIGUAL
 125             | '<'
 126             | MENORIGUAL
 127             | '='
 128             | DISTINTO

 129  bloque_else : bloque_else_simple
 130              | bloque_else_multiple

 131  bloque_else_multiple : ELSE BEGIN bloque_sent_ejecutables ';' END
 132                       | ELSE BEGIN bloque_sent_ejecutables END

 133  bloque_else_simple : ELSE bloque_sentencia_simple

 134  bloque_THEN : bloque_THEN_simple
 135              | bloque_THEN_multiple

 136  bloque_THEN_multiple : THEN BEGIN bloque_sent_ejecutables ';' END
 137                       | THEN BEGIN bloque_sent_ejecutables END

 138  bloque_THEN_simple : THEN bloque_sentencia_simple

 139  bloque_unidad : bloque_unidad_simple
 140                | bloque_unidad_multiple

 141  bloque_unidad_multiple : BEGIN bloque_sent_ejecutables ';' END
 142                         | BEGIN END
 143                         | BEGIN bloque_sent_ejecutables END

 144  bloque_unidad_simple : bloque_sentencia_simple

 145  bloque_sent_ejecutables : bloque_sent_ejecutables ';' bloque_sentencia_simple
 146                          | bloque_sentencia_simple
 147                          | bloque_sent_ejecutables bloque_sentencia_simple

 148  bloque_sentencia_simple : sentencia_ejecutable

 149  cadena : CADENAMULTILINEA

 150  sentencia_WHILE : encabezado_WHILE condicion bloque_unidad
 151                  | encabezado_WHILE condicion error

 152  encabezado_WHILE : WHILE

 153  sentencia_goto : GOTO ETIQUETA
 154                 | GOTO error

state 0
	$accept : . programa $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	programa  goto 3
	ID_simple  goto 4


state 1
	programa : BEGIN . sentencias END  (3)

	error  shift 5
	IF  shift 6
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	ID  shift 2
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 16
	sentencias  goto 17
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	encabezado_funcion  goto 26
	retorno  goto 27
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	variable_simple  goto 33
	encabezado_WHILE  goto 34


state 2
	ID_simple : ID .  (98)

	.  reduce 98


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : ID_simple . BEGIN sentencias END  (1)
	programa : ID_simple . BEGIN END  (2)
	programa : ID_simple . BEGIN sentencias  (4)
	programa : ID_simple . sentencias END  (5)
	programa : ID_simple . sentencias  (6)

	error  shift 5
	IF  shift 6
	BEGIN  shift 35
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	ID  shift 2
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 16
	sentencias  goto 36
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	encabezado_funcion  goto 26
	retorno  goto 27
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	variable_simple  goto 33
	encabezado_WHILE  goto 34


state 5
	sentencia : error . ';'  (10)

	';'  shift 37
	.  error


state 6
	sentencia_IF : IF . condicion bloque_THEN ';' bloque_else ';' END_IF  (101)
	sentencia_IF : IF . condicion bloque_THEN ';' END_IF  (102)
	sentencia_IF : IF . condicion THEN END_IF  (103)
	sentencia_IF : IF . condicion bloque_THEN ';' ELSE END_IF  (104)
	sentencia_IF : IF . condicion bloque_THEN bloque_else ';' END_IF  (105)
	sentencia_IF : IF . condicion bloque_THEN END_IF  (106)
	sentencia_IF : IF . condicion bloque_THEN ';' bloque_else END_IF  (107)
	sentencia_IF : IF . condicion bloque_THEN bloque_else END_IF  (108)
	sentencia_IF : IF . condicion bloque_THEN ';' error  (109)
	sentencia_IF : IF . condicion bloque_THEN ';' bloque_else ';' error  (110)

	error  shift 38
	CTE  shift 39
	ID  shift 2
	'('  shift 40
	'-'  shift 41
	.  error

	ID_simple  goto 42
	CTE_con_sig  goto 43
	expresion_arit  goto 44
	variable_simple  goto 45
	invocacion  goto 46
	termino  goto 47
	factor  goto 48
	condicion  goto 49


state 7
	outf_rule : OUTF . '(' expresion_arit ')'  (59)
	outf_rule : OUTF . '(' ')'  (60)
	outf_rule : OUTF . '(' cadena ')'  (61)
	outf_rule : OUTF . '(' sentencias ')'  (62)

	'('  shift 50
	.  error


state 8
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (25)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'  (26)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig  (27)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo CTE_con_sig ',' CTE_con_sig  (28)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' ID_simple  (29)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' ',' CTE_con_sig '}'  (30)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig '}'  (31)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' CTE_con_sig ',' '}'  (32)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION tipo '{' '}'  (33)
	declaracion_subtipo : TYPEDEF . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (34)
	declaracion_subtipo : TYPEDEF . ID_simple ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'  (35)
	declaracion_subtipo : TYPEDEF . '<' tipo '>' ID_simple  (36)
	declaracion_subtipo : TYPEDEF . TRIPLE tipo '>' ID_simple  (37)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo ID_simple  (38)
	declaracion_subtipo : TYPEDEF . TRIPLE tipo ID_simple  (39)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' error  (40)

	ID  shift 2
	TRIPLE  shift 51
	ASIGNACION  shift 52
	'<'  shift 53
	.  error

	ID_simple  goto 54


state 9
	retorno : RET . '(' expresion_arit ')'  (50)
	retorno : RET . '(' ')'  (51)

	'('  shift 55
	.  error


state 10
	encabezado_WHILE : WHILE .  (152)

	.  reduce 152


state 11
	sentencia_goto : GOTO . ETIQUETA  (153)
	sentencia_goto : GOTO . error  (154)

	error  shift 56
	ETIQUETA  shift 57
	.  error


state 12
	sentencia_ejecutable : ETIQUETA .  (56)

	.  reduce 56


state 13
	tipo_primitivo : INTEGER .  (22)

	.  reduce 22


state 14
	tipo_primitivo : DOUBLE .  (23)

	.  reduce 23


state 15
	tipo_primitivo : OCTAL .  (24)

	.  reduce 24


state 16
	tipo : ID_simple .  (20)
	variable_simple : ID_simple .  (97)

	FUN  reduce 20
	ID  reduce 20
	ASIGNACION  reduce 97
	'{'  reduce 97


state 17
	programa : BEGIN sentencias . END  (3)
	sentencias : sentencias . sentencia  (7)

	error  shift 5
	IF  shift 6
	END  shift 58
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	ID  shift 2
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 16
	sentencia  goto 59
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	encabezado_funcion  goto 26
	retorno  goto 27
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	variable_simple  goto 33
	encabezado_WHILE  goto 34


state 18
	sentencias : sentencia .  (8)

	.  reduce 8


state 19
	sentencia : sentencia_declarativa .  (9)

	.  reduce 9


state 20
	sentencia : sentencia_ejecutable . ';'  (11)
	sentencia : sentencia_ejecutable .  (12)

	';'  shift 60
	$end  reduce 12
	error  reduce 12
	IF  reduce 12
	END  reduce 12
	OUTF  reduce 12
	TYPEDEF  reduce 12
	RET  reduce 12
	ID  reduce 12
	WHILE  reduce 12
	GOTO  reduce 12
	ETIQUETA  reduce 12
	INTEGER  reduce 12
	DOUBLE  reduce 12
	OCTAL  reduce 12
	')'  reduce 12


state 21
	sentencia_declarativa : declaracion_variable .  (13)

	.  reduce 13


state 22
	sentencia_declarativa : declaracion_funciones . ';'  (14)
	sentencia_declarativa : declaracion_funciones .  (16)

	';'  shift 61
	$end  reduce 16
	error  reduce 16
	IF  reduce 16
	END  reduce 16
	OUTF  reduce 16
	TYPEDEF  reduce 16
	RET  reduce 16
	ID  reduce 16
	WHILE  reduce 16
	GOTO  reduce 16
	ETIQUETA  reduce 16
	INTEGER  reduce 16
	DOUBLE  reduce 16
	OCTAL  reduce 16
	')'  reduce 16


state 23
	sentencia_declarativa : declaracion_subtipo . ';'  (15)
	sentencia_declarativa : declaracion_subtipo .  (17)

	';'  shift 62
	$end  reduce 17
	error  reduce 17
	IF  reduce 17
	END  reduce 17
	OUTF  reduce 17
	TYPEDEF  reduce 17
	RET  reduce 17
	ID  reduce 17
	WHILE  reduce 17
	GOTO  reduce 17
	ETIQUETA  reduce 17
	INTEGER  reduce 17
	DOUBLE  reduce 17
	OCTAL  reduce 17
	')'  reduce 17


state 24
	declaracion_variable : tipo . variables ';'  (18)
	declaracion_variable : tipo . variables error  (19)
	encabezado_funcion : tipo . FUN ID  (42)
	encabezado_funcion : tipo . FUN  (43)

	FUN  shift 63
	ID  shift 2
	.  error

	ID_simple  goto 64
	variables  goto 65
	variable_simple  goto 66


state 25
	tipo : tipo_primitivo .  (21)

	.  reduce 21


state 26
	declaracion_funciones : encabezado_funcion . parametros_parentesis BEGIN cuerpo_funcion END  (41)

	'('  shift 67
	.  error

	parametros_parentesis  goto 68


state 27
	sentencia_ejecutable : retorno .  (58)

	.  reduce 58


state 28
	sentencia_ejecutable : asignacion .  (52)

	.  reduce 52


state 29
	sentencia_ejecutable : sentencia_IF .  (53)

	.  reduce 53


state 30
	sentencia_ejecutable : sentencia_WHILE .  (54)

	.  reduce 54


state 31
	sentencia_ejecutable : sentencia_goto .  (55)

	.  reduce 55


state 32
	sentencia_ejecutable : outf_rule .  (57)

	.  reduce 57


state 33
	asignacion : variable_simple . ASIGNACION expresion_arit  (63)
	asignacion : variable_simple . '{' CTE '}' ASIGNACION expresion_arit  (64)
	asignacion : variable_simple . '{' '-' CTE '}' ASIGNACION expresion_arit  (65)

	ASIGNACION  shift 69
	'{'  shift 70
	.  error


state 34
	sentencia_WHILE : encabezado_WHILE . condicion bloque_unidad  (150)
	sentencia_WHILE : encabezado_WHILE . condicion error  (151)

	error  shift 38
	CTE  shift 39
	ID  shift 2
	'('  shift 40
	'-'  shift 41
	.  error

	ID_simple  goto 42
	CTE_con_sig  goto 43
	expresion_arit  goto 44
	variable_simple  goto 45
	invocacion  goto 46
	termino  goto 47
	factor  goto 48
	condicion  goto 71


state 35
	programa : ID_simple BEGIN . sentencias END  (1)
	programa : ID_simple BEGIN . END  (2)
	programa : ID_simple BEGIN . sentencias  (4)

	error  shift 5
	IF  shift 6
	END  shift 72
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	ID  shift 2
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 16
	sentencias  goto 73
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	encabezado_funcion  goto 26
	retorno  goto 27
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	variable_simple  goto 33
	encabezado_WHILE  goto 34


state 36
	programa : ID_simple sentencias . END  (5)
	programa : ID_simple sentencias .  (6)
	sentencias : sentencias . sentencia  (7)

	error  shift 5
	IF  shift 6
	END  shift 74
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	ID  shift 2
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	$end  reduce 6

	ID_simple  goto 16
	sentencia  goto 59
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	encabezado_funcion  goto 26
	retorno  goto 27
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	variable_simple  goto 33
	encabezado_WHILE  goto 34


state 37
	sentencia : error ';' .  (10)

	.  reduce 10


state 38
	expresion_arit : error . '+' error  (77)
	expresion_arit : error . '-' error  (78)
	expresion_arit : error . termino  (81)
	termino : error . '*' error  (85)
	termino : error . '/' error  (86)

	error  shift 75
	CTE  shift 39
	ID  shift 2
	'-'  shift 76
	'+'  shift 77
	'/'  shift 78
	'*'  shift 79
	.  error

	ID_simple  goto 42
	CTE_con_sig  goto 43
	variable_simple  goto 45
	invocacion  goto 46
	termino  goto 80
	factor  goto 48


state 39
	CTE_con_sig : CTE .  (99)

	.  reduce 99


state 40
	condicion : '(' . '(' list_expre ')' comparador '(' list_expre ')' ')'  (111)
	condicion : '(' . list_expre ')' comparador '(' list_expre ')' ')'  (112)
	condicion : '(' . '(' list_expre ')' comparador '(' list_expre ')'  (113)
	condicion : '(' . list_expre ')' comparador '(' list_expre ')'  (114)
	condicion : '(' . expresion_arit comparador expresion_arit ')'  (115)
	condicion : '(' . expresion_arit comparador expresion_arit  (117)
	condicion : '(' . list_expre ')'  (119)
	condicion : '(' . '(' list_expre ')' '(' list_expre ')' ')'  (120)
	condicion : '(' . '(' list_expre comparador '(' list_expre ')' ')'  (121)
	condicion : '(' . '(' list_expre ')' comparador list_expre ')' ')'  (122)

	error  shift 38
	CTE  shift 39
	ID  shift 2
	','  shift 81
	'('  shift 82
	'-'  shift 41
	.  error

	ID_simple  goto 42
	CTE_con_sig  goto 43
	expresion_arit  goto 83
	variable_simple  goto 45
	invocacion  goto 46
	list_expre  goto 84
	termino  goto 47
	factor  goto 48


state 41
	CTE_con_sig : '-' . CTE  (100)

	CTE  shift 85
	.  error


state 42
	invocacion : ID_simple . '(' expresion_arit ')'  (66)
	invocacion : ID_simple . '(' tipo_primitivo '(' expresion_arit ')' ')'  (67)
	invocacion : ID_simple . '(' ')'  (68)
	invocacion : ID_simple . '(' error ')'  (69)
	variable_simple : ID_simple .  (97)

	'('  shift 86
	$end  reduce 97
	error  reduce 97
	IF  reduce 97
	THEN  reduce 97
	ELSE  reduce 97
	BEGIN  reduce 97
	END  reduce 97
	END_IF  reduce 97
	OUTF  reduce 97
	TYPEDEF  reduce 97
	RET  reduce 97
	ID  reduce 97
	WHILE  reduce 97
	GOTO  reduce 97
	ETIQUETA  reduce 97
	MAYORIGUAL  reduce 97
	MENORIGUAL  reduce 97
	DISTINTO  reduce 97
	INTEGER  reduce 97
	DOUBLE  reduce 97
	OCTAL  reduce 97
	';'  reduce 97
	'{'  reduce 97
	','  reduce 97
	'<'  reduce 97
	'>'  reduce 97
	')'  reduce 97
	'-'  reduce 97
	'+'  reduce 97
	""  reduce 97
	'/'  reduce 97
	'*'  reduce 97
	'='  reduce 97


state 43
	factor : CTE_con_sig .  (90)

	.  reduce 90


state 44
	expresion_arit : expresion_arit . '+' termino  (74)
	expresion_arit : expresion_arit . '-' termino  (75)
	expresion_arit : expresion_arit . '+' error  (79)
	expresion_arit : expresion_arit . '-' error  (80)
	condicion : expresion_arit . comparador expresion_arit ')'  (116)
	condicion : expresion_arit . comparador expresion_arit  (118)

	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	'<'  shift 90
	'>'  shift 91
	'-'  shift 92
	'+'  shift 93
	'='  shift 94
	.  error

	comparador  goto 95


state 45
	factor : variable_simple .  (89)
	factor : variable_simple . '{' CTE '}'  (92)
	factor : variable_simple . '{' '-' CTE '}'  (93)

	'{'  shift 96
	$end  reduce 89
	error  reduce 89
	IF  reduce 89
	THEN  reduce 89
	ELSE  reduce 89
	BEGIN  reduce 89
	END  reduce 89
	END_IF  reduce 89
	OUTF  reduce 89
	TYPEDEF  reduce 89
	RET  reduce 89
	ID  reduce 89
	WHILE  reduce 89
	GOTO  reduce 89
	ETIQUETA  reduce 89
	MAYORIGUAL  reduce 89
	MENORIGUAL  reduce 89
	DISTINTO  reduce 89
	INTEGER  reduce 89
	DOUBLE  reduce 89
	OCTAL  reduce 89
	';'  reduce 89
	','  reduce 89
	'<'  reduce 89
	'>'  reduce 89
	')'  reduce 89
	'-'  reduce 89
	'+'  reduce 89
	""  reduce 89
	'/'  reduce 89
	'*'  reduce 89
	'='  reduce 89


state 46
	factor : invocacion .  (91)

	.  reduce 91


state 47
	expresion_arit : termino .  (76)
	termino : termino . "" factor  (82)
	termino : termino . '/' factor  (83)
	termino : termino . '*' error  (87)
	termino : termino . '/' error  (88)

	""  shift 97
	'/'  shift 98
	'*'  shift 99
	$end  reduce 76
	error  reduce 76
	IF  reduce 76
	THEN  reduce 76
	ELSE  reduce 76
	BEGIN  reduce 76
	END  reduce 76
	END_IF  reduce 76
	OUTF  reduce 76
	TYPEDEF  reduce 76
	RET  reduce 76
	ID  reduce 76
	WHILE  reduce 76
	GOTO  reduce 76
	ETIQUETA  reduce 76
	MAYORIGUAL  reduce 76
	MENORIGUAL  reduce 76
	DISTINTO  reduce 76
	INTEGER  reduce 76
	DOUBLE  reduce 76
	OCTAL  reduce 76
	';'  reduce 76
	','  reduce 76
	'<'  reduce 76
	'>'  reduce 76
	')'  reduce 76
	'-'  reduce 76
	'+'  reduce 76
	'='  reduce 76


state 48
	termino : factor .  (84)

	.  reduce 84


state 49
	sentencia_IF : IF condicion . bloque_THEN ';' bloque_else ';' END_IF  (101)
	sentencia_IF : IF condicion . bloque_THEN ';' END_IF  (102)
	sentencia_IF : IF condicion . THEN END_IF  (103)
	sentencia_IF : IF condicion . bloque_THEN ';' ELSE END_IF  (104)
	sentencia_IF : IF condicion . bloque_THEN bloque_else ';' END_IF  (105)
	sentencia_IF : IF condicion . bloque_THEN END_IF  (106)
	sentencia_IF : IF condicion . bloque_THEN ';' bloque_else END_IF  (107)
	sentencia_IF : IF condicion . bloque_THEN bloque_else END_IF  (108)
	sentencia_IF : IF condicion . bloque_THEN ';' error  (109)
	sentencia_IF : IF condicion . bloque_THEN ';' bloque_else ';' error  (110)

	THEN  shift 100
	.  error

	bloque_THEN  goto 101
	bloque_THEN_simple  goto 102
	bloque_THEN_multiple  goto 103


state 50
	outf_rule : OUTF '(' . expresion_arit ')'  (59)
	outf_rule : OUTF '(' . ')'  (60)
	outf_rule : OUTF '(' . cadena ')'  (61)
	outf_rule : OUTF '(' . sentencias ')'  (62)

	error  shift 104
	IF  shift 6
	OUTF  shift 7
	TYPEDEF  shift 8
	RET  shift 9
	CTE  shift 39
	ID  shift 2
	CADENAMULTILINEA  shift 105
	WHILE  shift 10
	GOTO  shift 11
	ETIQUETA  shift 12
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	')'  shift 106
	'-'  shift 41
	.  error

	ID_simple  goto 107
	sentencias  goto 108
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	declaracion_variable  goto 21
	declaracion_funciones  goto 22
	declaracion_subtipo  goto 23
	tipo  goto 24
	tipo_primitivo  goto 25
	CTE_con_sig  goto 43
	encabezado_funcion  goto 26
	retorno  goto 27
	expresion_arit  goto 109
	asignacion  goto 28
	sentencia_IF  goto 29
	sentencia_WHILE  goto 30
	sentencia_goto  goto 31
	outf_rule  goto 32
	cadena  goto 110
	variable_simple  goto 111
	invocacion  goto 46
	termino  goto 47
	factor  goto 48
	encabezado_WHILE  goto 34


state 51
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' ID_simple  (29)
	declaracion_subtipo : TYPEDEF TRIPLE . tipo '>' ID_simple  (37)
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo ID_simple  (38)
	declaracion_subtipo : TYPEDEF TRIPLE . tipo ID_simple  (39)
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' error  (40)

	ID  shift 2
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	'<'  shift 112
	.  error

	ID_simple  goto 113
	tipo  goto 114
	tipo_primitivo  goto 25


state 52
	declaracion_subtipo : TYPEDEF ASIGNACION . tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (34)

	ID  shift 2
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 113
	tipo  goto 115
	tipo_primitivo  goto 25


state 53
	declaracion_subtipo : TYPEDEF '<' . tipo '>' ID_simple  (36)

	ID  shift 2
	INTEGER  shift 13
	DOUBLE  shift 14
	OCTAL  shift 15
	.  error

	ID_simple  goto 113
	tipo  goto 116
	tipo_primitivo  goto 25


state 54
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (25)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo CTE_con_sig ',' CTE_con_sig '}'  (26)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig  (27)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo CTE_con_sig ',' CTE_con_sig  (28)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' ',' CTE_con_sig '}'  (30)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig '}'  (31)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' CTE_con_sig ',' '}'  (32)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION tipo '{' '}'  (33)
	declaracion_subtipo : TYPEDEF ID_simple . ASIGNACION '{' CTE_con_sig ',' CTE_con_sig '}'  (35)

	ASIGNACION  shift 117
	.  error


state 55
	retorno : RET '(' . expresion_arit ')'  (50)
	retorno : RET '(' . ')'  (51)

	error  shift 38
	CTE  shift 39
	ID  shift 2
	')'  shift 118
	'-'  shift 41
	.  error

	ID_simple  goto 42
	CTE_con_sig  goto 43
	expresion_arit  goto 119
	variable_simple  goto 45
	invocacion  goto 46
	termino  goto 47
	factor  goto 48


state 56
	sentencia_goto : GOTO error .  (154)

	.  reduce 154


state 57
	sentencia_goto : GOTO ETIQUETA .  (153)

	.  reduce 153


state 58
	programa : BEGIN sentencias END .  (3)

	.  reduce 3


state 59
	sentencias : sentencias sentencia .  (7)

	.  reduce 7


state 60
	sentencia : sentencia_ejecutable ';' .  (11)

	.  reduce 11


state 61
	sentencia_declarativa : declaracion_funciones ';' .  (14)

	.  reduce 14

